# libsodium-cmake

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
.github/workflows/: ci.yaml  linux-ci.yaml  windows-ci.yaml
test/: CMakeLists.txt
